--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.13",
+    "apexcharts": "^4.2.0",
+    "axios": "^1.7.9",
     "framer-motion": "^11.11.17",
+    "lodash": "^4.17.21",
     "ol": "^10.2.1",
+    "ol-ext": "^4.0.24",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
